tools/tests/ui/fail/l1055.cnf
// Test file for error code: L1055
// Expected error: Overflow Unexpected character in encoding -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
